--- a/Map.css
+++ b/Map.css
@@ -1,35 +1,7 @@
-#airport-settings {
-    width: calc(100% - 8px);
-    border: 2px solid black;
-    height: 128px;
-    padding: 4px;
-    margin: 10px 14px 10px 0px;
-}
-
-#airport-settings #setting-name {
-    width: 128px;
-    float: left;
-    border-right: 1px solid black;
-}
-
-#airport-settings #setting-value {
-    width: calc(100% - 128px);
-    margin-left: 128px;
-    min-widtH: 240px;
-    text-align: left;
-}
-
-#airport-settings #setting-value div {
-    margin-left: 14px;
-}
 
 #airport-map{
     width: 800px;
     height: 600px;
-}
-
-#airport-data {
-    margin: 12px;
 }
 
 #exercise-toggle {
@@ -41,4 +13,32 @@
     vertical-align: text-bottom;
     font-size: 32px;
     font-weight: bold;
+}
+
+#exercise-description {
+    width: 45%;
+    display: inline-block;
+    margin-left: 5%;
+    padding-right: 2%;
+    vertical-align: top;
+    margin-top: 2%;
+}
+
+#map {
+    vertical-align: top;
+    margin-top: 4%;
+    width: 45%;
+    display: inline-block;
+}
+
+#map select {
+    margin-bottom: 2%;
+}
+
+#map > #airport-map {
+    width: 100%;
+}
+
+.input-group {
+    width: 50%;
 }
