--- a/Map.css
+++ b/Map.css
@@ -1,44 +1,119 @@
-#airport-settings {
-    width: calc(100% - 8px);
-    border: 2px solid black;
-    height: 128px;
-    padding: 4px;
-    margin: 10px 14px 10px 0px;
+body {
+    margin: 0;
 }
 
-#airport-settings #setting-name {
-    width: 128px;
+#title {
+    padding-top: 40px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2em;
+}
+
+#content {
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+#innercontent {
+    margin-top: 0%;
+    margin-bottom: 5%;
+    margin-left: 15%;
+    margin-right: 15%;
+    border-style: solid;
+    border-width: 2px;
+    min-width: 800px;
+    max-width: 1000px;
+}
+
+#airportMap {
+    width: 100%;
+    height: 500px;
+}
+
+#topbar {
+    width: 100%;
+    height: 60px;
+    background-color: lightgreen;
+}
+
+#search-block {
+    height: 100%;
+    width: 30%;
     float: left;
-    border-right: 1px solid black;
-}
-
-#airport-settings #setting-value {
-    width: calc(100% - 128px);
-    margin-left: 128px;
-    min-widtH: 240px;
-    text-align: left;
-}
-
-#airport-settings #setting-value div {
-    margin-left: 14px;
-}
-
-#airport-map{
-    width: 800px;
-    height: 600px;
-}
-
-#airport-data {
-    margin: 12px;
-}
-
-#exercise-toggle {
-    cursor: pointer;
-}
-
-#instruction-toggle {
-    line-height: 44px;
-    vertical-align: text-bottom;
-    font-size: 32px;
+    font-family: 'Open Sans Condensed', sans-serif;
     font-weight: bold;
+    background-color: lightgreen;
+    font-size: .8em;
+}
+
+#instruction-block {
+    height: 100%;
+    width: 30%;
+    float: left;
+}
+
+#instruction-wrapper {
+    margin-top: 7px;
+    margin-left: 20px;
+    font-family: 'Open Sans Condensed', sans-serif;
+    background-color: lightgreen;
+    font-size: .7em;
+    font-weight: bold;
+}
+
+#result-block {
+    height: 100%;
+    width: 35%;
+    float: right;
+    background-color: lightgreen;
+    font-weight: bold;
+    font-style: italic;
+    font-size: .8em;
+}
+
+#setting-printName {
+    padding-top: 20px;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: .9em;
+}
+
+.ui-state-hover {
+    background: #428BCA!important;
+}
+
+#iw-container {
+    margin-bottom: 10px;
+}
+
+#iw-container .iw-title {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 5px;
+    background-color: lightgreen;
+    color: black;
+    margin: 0;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    border-bottom: 0px;
+}
+
+#iw-container .iw-content {
+    font-size: 13px;
+    line-height: 18px;
+    font-weight: 400;
+    margin-right: 1px;
+    padding: 15px 5px 20px 15px;
+    max-height: 140px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    background-color: lightgray;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black
+}
+
+td {
+    padding: 3px;
 }
