--- a/assets/css/Map.css
+++ b/assets/css/Map.css
@@ -12,6 +12,16 @@
     border-right: 1px solid black;
 }
 
+.list-group , #airport-list-group
+{
+    width:300px;
+    height: 600px;
+    overflow-y: scroll;
+    margin-right: 8px;
+    margin-left: 20px;
+ 
+}
+
 #airport-settings #setting-value {
     width: calc(100% - 128px);
     margin-left: 128px;
