--- a/Map.css
+++ b/Map.css
@@ -1,9 +1,14 @@
+#airport-controls {
+	background-color: #FFFFFF;
+	margin: 10px 10px 10px 10px;
+	padding: 10px 10px 10px 10px;
+    font-size: 14px;
+    font-weight: bold;
+}
+
 #airport-settings {
-    width: calc(100% - 8px);
-    border: 2px solid black;
-    height: 128px;
-    padding: 4px;
-    margin: 10px 14px 10px 0px;
+    width: 100%;
+    height: 100%;
 }
 
 #airport-settings #setting-name {
@@ -15,7 +20,7 @@
 #airport-settings #setting-value {
     width: calc(100% - 128px);
     margin-left: 128px;
-    min-widtH: 240px;
+    min-width: 240px;
     text-align: left;
 }
 
@@ -24,12 +29,8 @@
 }
 
 #airport-map{
-    width: 800px;
-    height: 600px;
-}
-
-#airport-data {
-    margin: 12px;
+    width: 100%;
+    height: 800px;
 }
 
 #exercise-toggle {
